Added functionality for actual translation